--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,6 @@ node_js:
 before_install:
   - npm install -g grunt-cli
 install:
-  - npm install]
+  - npm install
   - bower install
   - npm test
