--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ node_js:
   - "0.10"
   - "iojs"
 before_install:
-  - npm install -g grunt-cli
+  - npm install -g grunt-cli bower
 install:
   - npm install
   - bower install
