--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "digraphe",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "An implementation of a directed graph.",
   "main": "graph.js",
   "repository": {
@@ -9,7 +9,9 @@
   },
   "license": "MIT",
   "scripts": {
-    "test": "grunt test"
+    "test": "grunt test",
+    "build": "grunt",
+    "prepublish": "npm run build"
   },
   "keywords": [
     "graph"
@@ -19,7 +21,7 @@
     "grunt": "^0.4.5",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-copy": "^0.8.0",
-    "grunt-contrib-jasmine": "^0.8.2",
+    "grunt-contrib-jasmine": "=1.0.3",
     "grunt-contrib-jshint": "^0.11.2",
     "grunt-contrib-uglify": "^0.9.1",
     "grunt-template-jasmine-requirejs": "^0.2.3",
