--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,12 @@
 language: node_js
 node_js:
-- '0.12'
-- '0.10'
-- '6'
+  - '0.12'
+  - '0.10'
+  - '6'
 before_install:
-- npm install -g grunt-cli bower
+  - npm install -g grunt-cli bower
 install:
-- bower install
-- npm install
+  - bower install
+  - npm install
+after_success:
+  - if [[ -v $TRAVIS_TAG ]] then; echo "toto"; fi
