--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,6 @@ install:
   - bower install
   - npm install
 after_success:
+  - echo foo
+  - echo $TRAVIS_TAG
   - '[ -n "$TRAVIS_TAG" ] && echo toto'
