--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-contrib-clean": "^0.6.0",
+    "grunt-contrib-compress": "^1.4.3",
     "grunt-contrib-copy": "^0.8.0",
     "grunt-contrib-jasmine": "=1.0.3",
     "grunt-contrib-jshint": "^0.11.2",
