--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,13 @@
 language: node_js
 node_js:
-  - '0.12'
-  - '0.10'
   - '6'
+  - '4'
+  - '0.12'
 before_install:
-  - npm install -g grunt-cli bower
+  - npm install -g grunt-cli istanbul codecov
 install:
-  - bower install
   - npm install
+script:
+  - npm test
+  - istanbul cover ./node_modules/mocha/bin/_mocha tests --reporter lcovonly -- -R spec
+  - codecov
