--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "digraphe",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "An cross-platform implementation of a directed graph.",
   "main": "graph.js",
   "author": "Halim Qarroum <hqm.post@gmail.com>",
@@ -10,8 +10,8 @@
   },
   "license": "MIT",
   "scripts": {
-    "test": "grunt test",
-    "build": "grunt",
+    "test": "npx grunt test",
+    "build": "npx grunt",
     "prepublishOnly": "npm run build"
   },
   "keywords": [
@@ -19,21 +19,21 @@
     "directed"
   ],
   "devDependencies": {
-    "expect": "^21.0.0",
+    "expect": "^27.0.2",
     "grunt": "^1.0.1",
-    "grunt-contrib-clean": "^1.1.0",
+    "grunt-contrib-clean": "^2.0.0",
     "grunt-contrib-copy": "^1.0.0",
-    "grunt-contrib-jshint": "^1.1.0",
-    "grunt-contrib-uglify": "^3.0.1",
+    "grunt-contrib-jshint": "^3.0.0",
+    "grunt-contrib-uglify": "^5.0.1",
     "grunt-mocha-test": "^0.13.2",
-    "load-grunt-tasks": "^3.1.0",
-    "mocha": "^4.0.0",
+    "load-grunt-tasks": "^5.1.0",
+    "mocha": "^8.4.0",
     "should": "^13.2.3",
     "should-sinon": "0.0.6",
-    "sinon": "^7.2.2",
-    "time-grunt": "^1.2.1"
+    "sinon": "^11.1.1",
+    "time-grunt": "^2.0.0"
   },
   "dependencies": {
-    "lodash": "^4.17.4"
+    "lodash": "^4.17.21"
   }
 }
